FIO-3974 Fixed higher contrast error appearing without error wrapper

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -16,6 +16,14 @@ $autocomplete-in-dialog-z-index: $dialog-z-index + 1000;
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
+
+  .formio-errors .error {
+    color: #C20000;
+  }
+
+  .field-required:after {
+    color:#C20000;
+  }
 }
 
 .formio-warning-wrapper {
@@ -39,7 +47,7 @@ $autocomplete-in-dialog-z-index: $dialog-z-index + 1000;
 
 .formio-errors {
   .error {
-    color: #BF2231;
+    color: #dc3545;
   }
   .warning {
     color: #856404;
@@ -91,10 +99,6 @@ $autocomplete-in-dialog-z-index: $dialog-z-index + 1000;
 
 .formio-component-tags tags {
   background-color: #fff;
-}
-
-.formio-error-wrapper .field-required:after {
-  color:#C20000;
 }
 
 .field-required:after, .tab-error::after {
